fix($all): removed invisible border radius from stat nav buttons

--- a/scss/_stats.scss
+++ b/scss/_stats.scss
@@ -71,6 +71,7 @@
             height: 100%;
 
             color: $color-primary;
+            border-radius: 0;
             background: 0;
 
             @media #{$desktop} {
